# presentation-dataset

./: .env.example  .gitignore  PROMPT.md  README.md  pyproject.toml  requirements.txt
config/: categories.yaml  pipeline.yaml  quality_thresholds.yaml  sources.yaml
config/blocklists/: elite_universities.yaml  fortune500.yaml  think_tanks.yaml
deploy/digitalocean/: DEPLOY.md  presentation-collect@.service  presentation-pipeline.service  run-collect-workers.sh  run-until-goal.sh  schema.sql  setup.sh  status.sh  update.sh
docs/: ARCHITECTURE.md  CONTINUOUS_RUN.md  PHASES.md  REQUIREMENTS_COMPLIANCE.md  extracted_pdf_requirements.txt
prompts/: classification.md  exclusion_check.md  graphics_scoring.md  metadata_extraction.md
scripts/: __init__.py  generate_blocklists.py  run_pipeline.py  watchdog.ps1  watchdog.sh
src/: __init__.py  config.py
src/analysis/: __init__.py  quality_scorer.py  visual_clarity.py
src/compliance/: profile.py
src/crawlers/: __init__.py  archive_org.py  common_crawl.py  url_filter.py  url_queue.py  web_search.py
src/deduplication/: index.py
src/delivery/: __init__.py  bundle.py  finalize.py  manifest.py  progress_report.py
src/download/: __init__.py  parallel.py  robots.py
src/filtering/: __init__.py  blocklist_filter.py
tests/: __init__.py  conftest.py  test_blocklist_filter.py  test_common_crawl.py  test_compliance.py  test_config.py  test_finalize.py  test_pipeline_integration.py  test_quality_scorer.py  test_real_file.py  test_scale.py  test_storage_postgres.py  test_supervisor.py  test_web_search.py
(+29 files in other folders)
