[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presentation-dataset-pipeline"
version = "0.1.0"
description = "Large-scale PPT/PPTX/PDF dataset collection pipeline for AI training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "python-pptx>=0.6.23",
    "PyMuPDF>=1.24",
    "Pillow>=10.0",
    "opencv-python-headless>=4.9",
    "imagehash>=4.3",
    "typer>=0.12",
    "rich>=13.0",
    "pandas>=2.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "psycopg[binary]>=3.1",
    "duckduckgo-search>=6.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3", "easyocr>=1.7"]
ai = ["openai>=1.0", "anthropic>=0.25"]
queue = ["redis>=5.0", "rq>=1.16"]
crawl = ["scrapy>=2.11", "playwright>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]
all = ["presentation-dataset-pipeline[ocr,ai,queue,crawl,dev]"]

[project.scripts]
pipeline = "scripts.run_pipeline:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
